...
	<string name="editor_menu_comp_select_wallpaper">Wallpaper</string>
	<string name="editor_menu_comp_select_watchface">Watchface</string>
	<string name="editor_menu_comp_select_vr">VR</string>
	<string name="editor_menu_comp_select_preview">Preview</string>
	<string name="editor_menu_undo">Undo</string>
	<string name="editor_menu_redo">Redo</string>
	<string name="editor_menu_tools">Tools</string>
	<string name="editor_menu_new_sketch">New Sketch</string>
	<string name="editor_menu_rename_sketch">Rename Sketch</string>
	<string name="editor_menu_duplicate_sketch">Duplicate Sketch</string>
	<string name="editor_menu_delete_sketch">Delete Sketch</string>
	<string name="editor_menu_open_sketch_properties">Sketch Properties</string>
	<string name="editor_menu_copy_to_sketchbook">Copy to Sketchbook</string>
	<string name="editor_menu_move_temp_to_sketchbook">Move to Sketchbook</string>
	<!-- Note that "copy sketch" currently only appears in the sketch properties menu. -->
	<string name="editor_menu_copy_sketch">Copy Sketch</string>
	
	<string name="editor_menu_tab_new">New Tab</string>
	<string name="editor_menu_tab_rename">Rename Tab</string>
	<string name="editor_menu_tab_duplicate">Duplicate Tab</string>
...
	
	<string name="title_activity_sketch_properties">Sketch Properties</string>
	
	<!-- Generic dialog options used in a lot of places. -->
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="create">Create</string>
	<string name="overflow_more">More</string>
	
	<!-- An empty array - used in some cases. Should not be translated. -->
	<string-array name="empty"></string-array>
	
...
	<string name="tab_rename_dialog_title">Rename Tab</string>
	<string name="tab_rename_dialog_message">Enter the new name for the tab:</string>
	<string name="tab_rename_success">The tab has been renamed.</string>
	
	<!-- The names of the top-level folders in the drawer -->
	<string name="drawer_folder_sketches">Sketches</string>
	<string name="drawer_folder_examples">Examples</string>
	<string name="drawer_folder_library_examples">Library Examples</string>
	<string name="drawer_folder_temporary">Temporary</string>
	<string name="drawer_folder_recent">Recent</string>
	
	<!-- These are the accessibility labels for the drawer open/close button. -->
	<string name="drawer_open_accessibility_text">Load Sketch</string>
...
	<string name="toggle_problem_overview_accessibility_text">Toggle Problem Overview</string>
	
	<!-- Note; this settings activity is not currently used. -->
	<string name="title_activity_character_tray_settings">Special Character Tray</string>
	
	<!-- Import library and library manager. -->
	<string name="tool_import_library">Import Library</string>
	<string name="library_manager_no_contributed_libraries">Libraries folder is empty</string>
	<string name="library_manager_open">Manage Libraries</string>
	<string name="title_activity_library_manager">Library Manager</string>
	<string name="library_manager_menu_install_zip_library">Install Compressed Library</string>
	<string name="library_manager_install_select_library_zip">Select Library Archive</string>
	<string name="library_manager_install_dialog_title">Installing</string>
	<string name="library_manager_install_message_copying">Copying</string>
	<string name="library_manager_install_message_extracting">Extracting</string>
	<string name="library_manager_install_message_dexing">Dexing</string>
	<string name="library_manager_contrib_menu_uninstall">Uninstall</string>
	<string name="library_manager_contrib_uninstall_warning_title">Uninstall</string>
	<string name="library_manager_contrib_uninstall_warning_message">will be uninstalled.</string>
	<string name="library_manager_library_uninstall_dialog_title">Uninstalling</string>
	<string name="library_manager_install_invalid_file_error_title">Invalid File</string>
	<string name="library_manager_install_invalid_file_error_message_nonexistant">The requested file does not exist. Try using a different file manager.</string>
	<string name="library_manager_install_invalid_file_error_message_not_zip">The requested file is not a ZIP archive.</string>
	<string name="library_manager_install_invalid_file_error_message_already_installed">The requested library has already been installed.</string>
...
	<string name="rename_sketch_failure_title">Cannot Move Sketch</string>
	<string name="rename_sketch_failure_message">Another file of the same name exists in the destination folder.</string>
	<string name="rename_move_folder_failure_title">Cannot Move Folder</string>
	<string name="rename_move_folder_failure_message">Another file of the same name exists in the destination folder.</string>
	<string name="rename_sketch_title">Rename \&quot;<xliff:g example="testSketch" id="sketchName">%1$s</xliff:g>\&quot;</string>
	<string name="rename_sketch_message">Enter the new name for the sketch:</string>
	<string name="rename_sketch_button">Rename</string>
	<string name="rename_folder_title">Rename Folder \&quot;<xliff:g example="testFolder" id="folderName">%1$s</xliff:g>\&quot;</string>
	<string name="rename_folder_message">Enter the new name for the folder:</string>
	<string name="rename_folder_button">Rename</string>
	<string name="move_temp_to_sketchbook_title">Move to Sketchbook</string>
	<string name="move_temp_to_sketchbook_message">Move \&quot;<xliff:g example="sketch_20171221a" id="sketchName">%1$s</xliff:g>\&quot; from temporary storage to the Sketchbook?</string>
	<string name="move_temp_to_sketchbook_button">Move</string>
	
	<!-- Export eclipse project tool. -->
	<string name="export_gradle_project">Export Gradle Project</string>
	<string name="export_gradle_project_success">The Gradle project has been exported.</string>
	
	<!-- Export signed package tool. -->
...
