...
	    
	    <View
  			android:layout_width="fill_parent"
  			android:layout_height="10dp"
   			android:background="#FFFFFFFF" />
	    
		<com.calsignlabs.apde.CodeEditText android:id="@+id/code"
		    android:inputType="text|textNoSuggestions|textMultiLine"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="3"
		   	android:gravity="top"
		    android:scrollbars="vertical"
...
		    android:background="@drawable/back"
		    android:padding="10dp"
		    android:text=""
		    android:textColor="#000000" />
		
	    <TextView
	        android:id="@+id/console"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:background="@drawable/back_console"
	        android:gravity="top"
	        android:padding="10dp"
...
