<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_run"
        android:icon="@drawable/ic_action_run"
        android:showAsAction="ifRoom"
        android:title="@string/menu_run"/>
    <item
        android:id="@+id/menu_stop"
        android:icon="@drawable/ic_action_stop"
        android:showAsAction="ifRoom"
        android:title="@string/menu_stop"/>
    <item
        android:id="@+id/menu_sketch_properties"
        android:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/menu_sketch_properties"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_save"
        android:showAsAction="never"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_tab_new"
        android:showAsAction="never"
        android:title="@string/menu_tab_new"/>
    <item
        android:id="@+id/menu_tab_rename"
        android:showAsAction="never"
        android:title="@string/menu_tab_rename"/>
    <item
        android:id="@+id/menu_tab_delete"
        android:showAsAction="never"
        android:title="@string/menu_tab_delete"/>
</menu>