<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="com.calsignlabs.apde.learning.LearningActivity">
	
	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	
	<FrameLayout
		android:id="@+id/learning_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />
</LinearLayout>
